--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/home.html">HOME</a>
-  <a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/movie.html">MOVIES</a>
-  <a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/series.html">SERIES</a>
-  <a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/upcomingreleases.html">UPCOMING RELEASES</a>
-  <a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/topairing.html">TOP AIRING</a>
-  <a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/gallery.html">GALLERY</a>
-  <a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/last.html" style="float:right">Goodbye: さようなら &#128075;</a>
+  <a href="https://altheat00.github.io/oreo-webpage/index.html">HOME</a>">HOME</a>
+  <a href="https://altheat00.github.io/oreo-webpage/movie.html">MOVIES</a>
+  <a href="https://altheat00.github.io/oreo-webpage/series.html">SERIES</a>
+  <a href="https://altheat00.github.io/oreo-webpage/upcomingreleases.html">UPCOMING RELEASES</a>
+  <a href="https://altheat00.github.io/oreo-webpage/topairing.html">TOP AIRING</a>
+  <a href="https://altheat00.github.io/oreo-webpage/gallery.html">GALLERY</a>
+  <a href="https://altheat00.github.io/oreo-webpage/goodbye.html" style="float:right">Goodbye: さようなら &#128075;</a>
 </div>
 
 <div class="row">
