--- a/gallery.html
+++ b/gallery.html
@@ -110,6 +110,6 @@
       <img src="https://wallpapercave.com/wp/wp5408468.png" alt="Image 25">
     </div>
   </div>
- <center><p><a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/index.html">HOME</a><center>
+ <center><p><a href="https://altheat00.github.io/oreo-webpage//index.html">HOME</a><center>
 </body>
 </html>
