--- a/goodbye.html
+++ b/goodbye.html
@@ -18,7 +18,7 @@
 
   
   <div style="text-align: center; padding: 20px;">
-   <B><a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/index.html" style="text-decoration: none; color: #333;">HOME</a>
+   <B><a href="https://altheat00.github.io/oreo-webpage/index.html" style="text-decoration: none; color: #333;">HOME</a>
   </div>
 </body>
 </html>
