--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
     <li><strong>Join the Adventure:</strong> Dive into the captivating world of anime, embracing stories that transcend time and space.</li>
     <li><strong>Let's Explore:</strong> Join us to relish the creativity, artistry, and magic that define the enchanting realm of anime.</li>
   </ul>
-<center><b><a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/index.html" style="text-decoration: none; color: #333;">HOME</a>
+<center><b><a href="https://altheat00.github.io/oreo-webpage//index.html" style="text-decoration: none; color: #333;">HOME</a>
   </div>
 </body>
 </html>
