--- a/movie.html
+++ b/movie.html
@@ -181,6 +181,6 @@
         <h7>Perfect Blue</h7>
         <p>Perfect Blue is as close to a perfect psychological thriller as feasibly possible and remains one of the most influential animated movies of all time, serving as inspiration for directors like Darren Aronofsky. </p>
       </div>
-<h1><a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/index.html">HOME</a></h1>
+<h1><a href="https://altheat00.github.io/oreo-webpage//index.html">HOME</a></h1>
 </body>
 </html>
