--- a/series.html
+++ b/series.html
@@ -150,7 +150,7 @@
       <h3>Naruto</h3>
       <p> It tells the story of Naruto Uzumaki, a young ninja who seeks recognition from his peers and dreams of becoming the Hokage, the leader of his village.</p>
 </div>
-<p><h1><a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/Torrealthealyka.HTML#">HOME</a></h1>
+<p><h1><a href="https://altheat00.github.io/oreo-webpage/">HOME</a></h1>
 </body>
 </html>
 
