--- a/topairing.html
+++ b/topairing.html
@@ -57,7 +57,7 @@
     <h1>Our Top Airing Anime</h1>
     <p>愛と笑いと人生の教訓: Find joy in anime series that offer a blend of romance, humor, and valuable life lessons for audiences of all ages.</p></h1>
   </div>
-   <center><p><a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/index.html">HOME</a><center>
+   <center><p><a href="https://altheat00.github.io/oreo-webpage//index.html">HOME</a><center>
   <div class="top-picks-container">
     <div class="top-pick">
       <img src="https://th.bing.com/th/id/OIP.jHCrwrdDvVZL99m322ao3QHaKZ?pid=ImgDet&rs=1" alt="Top Airing Anime 1">
