--- a/upcomingreleases.html
+++ b/upcomingreleases.html
@@ -93,6 +93,6 @@
 
 </p>
   </div>
-<p><a href="file:///C:/Users/althea/Documents/FINAL%20EXAM/index.html">HOME</a>
+<p><a href="https://altheat00.github.io/oreo-webpage//index.html">HOME</a>
 </body>
 </html>
