--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body {
 </div>
 
 <div class="topnav">
-  <a href="https://altheat00.github.io/oreo-webpage/home.html">HOME</a>">HOME</a>
+  <a href="https://altheat00.github.io/oreo-webpage/home.html">HOME</a>"</a>
   <a href="https://altheat00.github.io/oreo-webpage/movie.html">MOVIES</a>
   <a href="https://altheat00.github.io/oreo-webpage/series.html">SERIES</a>
   <a href="https://altheat00.github.io/oreo-webpage/upcomingreleases.html">UPCOMING RELEASES</a>
